Posts and Blogs Views and Controllers update

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,7 @@
     }
   },
     "AllowedHosts": "*",
-    "DefaultUserImage": "defaultUserImage.png"
+    "DefaultUserImage": "defaultUserImage.png",
+    "DefaultBlogImage": "DefaultBlogImage.png",
+    "DefaultPostImage": "DefaultPostImage.png"
 }
