user roles completed.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,17 +1,18 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; Database=DearCoder; User Id=postgres; Password=Zhongwen123",
-    "DearCoderContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DearCoder;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost; Port=5432; Database=DearCoder; User Id=postgres; Password=Zhongwen123",
+        "DearCoderContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DearCoder;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
     "AllowedHosts": "*",
     "DefaultUserImage": "defaultUserImage.png",
     "DefaultBlogImage": "DefaultBlogImage.png",
-    "DefaultPostImage": "DefaultPostImage.png"
+    "DefaultPostImage": "DefaultPostImage.png",
+    "AdminPassword": "Abc123!"
 }
