Added email service.

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,12 @@
     "DefaultUserImage": "defaultUserImage.png",
     "DefaultBlogImage": "DefaultBlogImage.png",
     "DefaultPostImage": "DefaultPostImage.png",
-    "AdminPassword": "Abc123!"
+    "AdminPassword": "Abc123!",
+    "MailSettings": {
+        "Mail": "wahl.kasey@gmail.com",
+        "DisplayName": "Kasey",
+        "Password": "qhaxgeexidstkqah",
+        "Host": "smtp.gmail.com",
+        "Port": 587
+    }
 }
