--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,7 @@
     "DefaultBlogImage": "DefaultBlogImage.png",
     "DefaultPostImage": "DefaultPostImage.png",
     "AdminPassword": "Abc123!",
+    "ModPassword": "Abc123!",
     "MailSettings": {
         "Mail": "wahl.kasey@gmail.com",
         "DisplayName": "Kasey",
